--- a/2022.md
+++ b/2022.md
@@ -22,23 +22,23 @@ The quickest way to get in touch is going to be via Twitter, my handle is [@Mich
 
 ## Progress
 
-- [✔️] ♾️ 1 > [Introduction](2022/Days/day01.md)
+- [✅] ♾️ 1 > [Introduction](2022/Days/day01.md)
 
 ### What is and why do we use DevOps
 
-- [✔️] ♾️ 2 > [Responsibilities of a DevOps Engineer](2022/Days/day02.md)
-- [✔️] ♾️ 3 > [DevOps Lifecycle - Application Focused](2022/Days/day03.md)
-- [✔️] ♾️ 4 > [DevOps & Agile](2022/Days/day04.md)
-- [✔️] ♾️ 5 > [Plan > Code > Build > Testing > Release > Deploy > Operate > Monitor >](2022/Days/day05.md)
-- [✔️] ♾️ 6 > [DevOps - The real stories](2022/Days/day06.md)
+- [✅] ♾️ 2 > [Responsibilities of a DevOps Engineer](2022/Days/day02.md)
+- [✅] ♾️ 3 > [DevOps Lifecycle - Application Focused](2022/Days/day03.md)
+- [✅] ♾️ 4 > [DevOps & Agile](2022/Days/day04.md)
+- [✅] ♾️ 5 > [Plan > Code > Build > Testing > Release > Deploy > Operate > Monitor >](2022/Days/day05.md)
+- [✅] ♾️ 6 > [DevOps - The real stories](2022/Days/day06.md)
 
 ### Learning a Programming Language
 
-- [✔️] ⌨️ 7 > [The Big Picture: DevOps & Learning a Programming Language](2022/Days/day07.md)
-- [✔️] ⌨️ 8 > [Setting up your DevOps environment for Go & Hello World](2022/Days/day08.md)
-- [✔️] ⌨️ 9 > [Let's explain the Hello World code](2022/Days/day09.md)
-- [✔️] ⌨️ 10 > [The Go Workspace & Compiling & running code](2022/Days/day10.md)
-- [✔️] ⌨️ 11 > [Variables, Constants & Data Types](2022/Days/day11.md)
+- [✅] ⌨️ 7 > [The Big Picture: DevOps & Learning a Programming Language](2022/Days/day07.md)
+- [✅] ⌨️ 8 > [Setting up your DevOps environment for Go & Hello World](2022/Days/day08.md)
+- [✅] ⌨️ 9 > [Let's explain the Hello World code](2022/Days/day09.md)
+- [✅] ⌨️ 10 > [The Go Workspace & Compiling & running code](2022/Days/day10.md)
+- [✅] ⌨️ 11 > [Variables, Constants & Data Types](2022/Days/day11.md)
 - [✔️] ⌨️ 12 > [Getting user input with Pointers and a finished program](2022/Days/day12.md)
 - [✔️] ⌨️ 13 > [Tweet your progress with our new App](2022/Days/day13.md)
 
