--- a/2022.md
+++ b/2022.md
@@ -39,8 +39,8 @@ The quickest way to get in touch is going to be via Twitter, my handle is [@Mich
 - [✅] ⌨️ 9 > [Let's explain the Hello World code](2022/Days/day09.md)
 - [✅] ⌨️ 10 > [The Go Workspace & Compiling & running code](2022/Days/day10.md)
 - [✅] ⌨️ 11 > [Variables, Constants & Data Types](2022/Days/day11.md)
-- [✔️] ⌨️ 12 > [Getting user input with Pointers and a finished program](2022/Days/day12.md)
-- [✔️] ⌨️ 13 > [Tweet your progress with our new App](2022/Days/day13.md)
+- [✅] ⌨️ 12 > [Getting user input with Pointers and a finished program](2022/Days/day12.md)
+- [✅] ⌨️ 13 > [Tweet your progress with our new App](2022/Days/day13.md)
 
 ### Knowing Linux Basics
 
