--- a/2022.md
+++ b/2022.md
@@ -44,13 +44,13 @@ The quickest way to get in touch is going to be via Twitter, my handle is [@Mich
 
 ### Knowing Linux Basics
 
-- [✔️] 🐧 14 > [The Big Picture: DevOps and Linux](2022/Days/day14.md)
-- [✔️] 🐧 15 > [Linux Commands for DevOps (Actually everyone)](2022/Days/day15.md)
-- [✔️] 🐧 16 > [Managing your Linux System, Filesystem & Storage](2022/Days/day16.md)
-- [✔️] 🐧 17 > [Text Editors - nano vs vim](2022/Days/day17.md)
-- [✔️] 🐧 18 > [SSH & Web Server(LAMP)](2022/Days/day18.md)
-- [✔️] 🐧 19 > [Automate tasks with bash scripts](2022/Days/day19.md)
-- [✔️] 🐧 20 > [Dev workstation setup - All the pretty things](2022/Days/day20.md)
+- [✅] 🐧 14 > [The Big Picture: DevOps and Linux](2022/Days/day14.md)
+- [✅] 🐧 15 > [Linux Commands for DevOps (Actually everyone)](2022/Days/day15.md)
+- [✅] 🐧 16 > [Managing your Linux System, Filesystem & Storage](2022/Days/day16.md)
+- [✅] 🐧 17 > [Text Editors - nano vs vim](2022/Days/day17.md)
+- [✅] 🐧 18 > [SSH & Web Server(LAMP)](2022/Days/day18.md)
+- [✅] 🐧 19 > [Automate tasks with bash scripts](2022/Days/day19.md)
+- [✅] 🐧 20 > [Dev workstation setup - All the pretty things](2022/Days/day20.md)
 
 ### Understand Networking
 
